--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 p-8">
+    <div class="flex justify-end">
+        <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">ไปยังหน้า ผู้ใช้</a>
+    </div>
     <h1 class="text-2xl font-bold mb-4">ผู้ดูแลระบบ Admin - Stock สินค้า</h1>
     <form action="" method="post" class="max-w-lg mx-auto bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <div class="mb-6">
